[project]
name = "dexonlinux"
version = "1.0.1"
description = "DexOnLinux is a tool that allows you to stream Samsung DeX from your Samsung device to your Linux PC, controlling it with your mouse and keyboard, and interacting with it as if it were a native application on your desktop."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "gabdevele", email = "me@gabdevele.dev" }
]
license = { file = "LICENSE" }
dependencies = [
    "colorama==0.4.6",
    "ptyprocess==0.7.0",
    "pycairo==1.28.0",
    "pydbus==0.6.0",
    "pygobject==3.54.2",
    "sh==2.2.2",
]
